# mtss-signer

./: .gitignore  README.md  blocks_test_script.py  cff_test_script.py  mtss_signer.py  pyproject.toml  sign_verify_traditional.py  test_script.py  validate_cff.py  write_cff_to_file.py
cffs/: 1-CFF(15, 4096).txt  1-CFF(64, 32768).txt  2-CFF(25, 125).txt  2-CFF(49, 2401).txt  2-CFF(64, 4096).txt  2-CFF(81, 6561).txt  3-CFF(121, 14641).txt  3-CFF(64, 512).txt  7-CFF(256, 4096).txt  7-CFF(64, 64).txt
keys/: ed25519_nopass_priv.pem  ed25519_nopass_pub.pem  ed25519_priv.pem  ed25519_pub.pem  key_generator.py  public_openssl1-1.pem  rsa_1024_priv.pem  rsa_1024_pub.pem  rsa_2048_priv.pem  rsa_2048_pub.pem  rsa_4096_priv.pem  rsa_4096_pub.pem  teste_senha_pub.pem
msg/: 103823_1.txt  1771561_1.txt  262144_1.txt  512_1.txt  59049_1.txt  6561_1.txt  729_1.txt  81_1.txt  generate_txt.py  generate_xml.py  modified_sample_message.txt  modified_sample_xml.xml  sample_xml.xml
msg/locate/: 4096_!_i1.txt
msg/sign/: 125_!!!!!!!!!!_10000.txt  4096_!.txt
msg/xml/: 32768__7.xml  4096__7.xml  512__7.xml  (+1 more)
mtsssigner/: cff_builder.py  logger.py  mtss_signer.py  plot.py  signature_scheme.py  signer.py  utils.py  verifier.py
test_keys/: des3_priv.pem  des3_pub.pem  key_generator.py  priv_com_senha.pem  private_openssl1-1.pem  pub_com_senha.pem  teste_senha_priv.pem
tests/: modified_sample_message.txt  modified_sample_message_corrected.txt  sample_message.txt  sample_message_signature.mts  sample_xml.xml  test_cff.py  test_cff_file.py  test_collision.py  test_sign_rsa2048_sha256.py
(+36 files in other folders)
