[tool.poetry]
name = "mtss-signer"
version = "0.1.0"
description = ""
authors = ["paolabel <pa0la.abel@hotmail.com>"]
readme = "README.md"
packages = [{include = "mtss_signer"}]

[tool.poetry.dependencies]
python = "^3.8.10"
galois = "^0.3.3"
pycryptodome = "^3.17"
numpy = "^1.23.5"
# pycrypto = "^2.6.1"
importlib-metadata = "^1.5.0"
setuptools = "^45.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
